--- a/src/app/incidents/incidents.component.html
+++ b/src/app/incidents/incidents.component.html
@@ -1,4 +1,4 @@
-<div class="incident">
+<div class="incident" routerLink="/incidents">
   <svg *ngIf="incident.type == 'Feu'" width="46" height="59" viewBox="0 0 46 59" fill="none"
     xmlns="http://www.w3.org/2000/svg">
     <path
