--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <header>
   <img routerLink="/home" *ngIf="isLoginPage()" src="../assets/512ERP.png" alt="512ERP" />
   <div class="title">SeinkSansDoozeBank — ERP Admin</div>
-  <button *ngIf="isLoginPage()" class="logout buttonBase">
+  <button routerLink="/login"  *ngIf="isLoginPage()" class="logout buttonBase">
     <span>Se connecter</span>
     <!-- <span>Se déconnecter</span> -->
   </button>
