--- a/src/app/caisse/caisse.component.html
+++ b/src/app/caisse/caisse.component.html
@@ -95,12 +95,26 @@
             </div>
           </div>
           <div class="productsContainer">
-            <div class="product" *ngFor="let item of cart.listProduct">
-              <div class="idProduct">{{item.produit.idProduit}}</div>
-              <div class="nameProduct">{{item.produit.nom}}</div>
-              <div class="priceProduct">{{item.produit.prix}}€</div>
-              <div class="quantityProduct">{{item.quantity}}</div>
-              <div (click)="deleteProduct(item.produit.idProduit)"><svg width="29" height="32" viewBox="0 0 29 32"
+            <div class="prod" *ngFor="let item of cart.listeProduits">
+              <div class="product" *ngIf="!this.produitVide.includes(item.produit.nom)">
+                <div class="idProduct">{{item.produit.idProduit}}</div>
+                <div class="nameProduct">{{item.produit.nom}}</div>
+                <div class="priceProduct">{{item.produit.prix}}€</div>
+                <div class="quantityProduct">{{item.quantity}}</div>
+                <div (click)="deleteProduct(item.produit.idProduit)"><svg width="29" height="32" viewBox="0 0 29 32"
+                    fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      d="M27.9716 5.91422C25.5792 5.67647 23.1867 5.49815 20.7794 5.36441V5.34955L20.4525 3.41777C20.2296 2.05066 19.9027 0 16.4255 0H12.5322C9.06982 0 8.74291 1.9615 8.50515 3.40291L8.19309 5.30497C6.81112 5.39413 5.42916 5.48329 4.04719 5.61703L1.01578 5.91422C0.391669 5.97366 -0.0541262 6.52348 0.00531317 7.13273C0.0647526 7.74199 0.599707 8.18778 1.22382 8.12834L4.25523 7.83115C12.0418 7.05843 19.8878 7.35563 27.7636 8.1432H27.8824C28.4471 8.1432 28.9375 7.71227 28.9969 7.13273C29.0415 6.52348 28.5957 5.97366 27.9716 5.91422Z"
+                      fill="#292D32" />
+                    <path
+                      d="M25.2372 10.2415C24.8806 9.86996 24.3902 9.66193 23.885 9.66193H5.10218C4.59694 9.66193 4.09171 9.86996 3.74993 10.2415C3.40815 10.613 3.21497 11.1182 3.24469 11.6383L4.166 26.8845C4.32946 29.1432 4.5375 31.9666 9.72359 31.9666H19.2635C24.4496 31.9666 24.6578 29.158 24.8211 26.8845L25.7424 11.6531C25.7722 11.1182 25.579 10.613 25.2372 10.2415ZM16.9603 24.5218H12.0119C11.4028 24.5218 10.8975 24.0165 10.8975 23.4073C10.8975 22.798 11.4028 22.2928 12.0119 22.2928H16.9603C17.5695 22.2928 18.0748 22.798 18.0748 23.4073C18.0748 24.0165 17.5695 24.5218 16.9603 24.5218ZM18.2085 18.5778H10.7786C10.1694 18.5778 9.66415 18.0726 9.66415 17.4633C9.66415 16.8541 10.1694 16.3489 10.7786 16.3489H18.2085C18.8177 16.3489 19.323 16.8541 19.323 17.4633C19.323 18.0726 18.8177 18.5778 18.2085 18.5778Z"
+                      fill="#292D32" />
+                  </svg>
+                </div>
+              </div>
+              <div class="displayError product" *ngIf="this.produitVide.includes(item.produit.nom)">
+                {{item.produit.nom}} n'est plus disponible
+                <div class="center" (click)="deleteProduct(item.produit.idProduit)"><svg width="29" height="32" viewBox="0 0 29 32"
                   fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
                     d="M27.9716 5.91422C25.5792 5.67647 23.1867 5.49815 20.7794 5.36441V5.34955L20.4525 3.41777C20.2296 2.05066 19.9027 0 16.4255 0H12.5322C9.06982 0 8.74291 1.9615 8.50515 3.40291L8.19309 5.30497C6.81112 5.39413 5.42916 5.48329 4.04719 5.61703L1.01578 5.91422C0.391669 5.97366 -0.0541262 6.52348 0.00531317 7.13273C0.0647526 7.74199 0.599707 8.18778 1.22382 8.12834L4.25523 7.83115C12.0418 7.05843 19.8878 7.35563 27.7636 8.1432H27.8824C28.4471 8.1432 28.9375 7.71227 28.9969 7.13273C29.0415 6.52348 28.5957 5.97366 27.9716 5.91422Z"
@@ -110,10 +124,11 @@
                     fill="#292D32" />
                 </svg>
               </div>
+              </div>
             </div>
           </div>
-          <div class="totalAmount">Montant Total {{this.cart.total}}€ <button (click)="viderPanier()"
-              [disabled]="this.cart.total==0" [id]="this.cart.total!=0?'redBg':''">Abandonner</button></div>
+          <div class="totalAmount">Montant Total {{this.cart.montant}}€ <button (click)="viderPanier()"
+              [disabled]="this.cart.montant==0" [id]="this.cart.montant!=0?'redBg':''">Abandonner</button></div>
         </div>
       </div>
       <div class="rightBottom">
