--- a/src/app/incident-page/incident-page.component.css
+++ b/src/app/incident-page/incident-page.component.css
@@ -66,3 +66,22 @@
 .leftTitles div {
   padding: 1em;
 }
+.choosed {
+  background-color: white;
+  color: var(--green512);
+  font-weight: bold;
+  border-radius:  10px 0 0 10px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  z-index: -1;
+}
+.menu{
+  transition: 0.5s ease-in-out;
+  cursor: pointer;
+}
+.menu:hover{
+  transform: translateX(-5%);
+}
+
+.choosed:hover{
+  transform:none
+}
