--- a/src/app/landing-page/landing-page.component.css
+++ b/src/app/landing-page/landing-page.component.css
@@ -10,7 +10,7 @@
 .mainContainer {
   display: flex;
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
 }
 
 .right {
@@ -43,6 +43,7 @@
   width: 55%;
   height: 533px;
   gap: 31px;
+  flex:3;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
