--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -12,44 +12,13 @@
       <div class="verticalButtons">
         <button class="greenButton" routerLink="/stocks"><img src="../../assets/stocks.png" alt="stocks">
           Stocks</button>
-        <button class="greenButton"><img src="../../assets/prix.png" alt="prix"> Prix</button>
-        <button class="greenButton"><img src="../../assets/horaires.png" alt="horaires"> Horaires et conso</button>
-        <button class="greenButton"><img src="../../assets/compta.png" alt="comptabilité"> Comptabilité</button>
+        <button class="greenButton" routerLink="/stocks/inventory"><img src="../../assets/prix.png" alt="prix">
+          Prix</button>
+        <button class="greenButton" routerLink="/horaires"><img src="../../assets/horaires.png" alt="horaires"> Horaires
+          et conso</button>
+        <button routerLink="/comptabilite" class="greenButton"><img src="../../assets/compta.png" alt="comptabilité"> Comptabilité</button>
       </div>
-      <form id="commandForm">
-        <h3>Nouveau Réapprovisionnement</h3>
-
-        <div class="formGroup">
-          <label for="productAsked">Produit demandé</label>
-          <select name="productAsked" id="productAsked">
-            <option value="BioEthanol">BioEthanol</option>
-            <option value="Gazole">Gazole</option>
-            <option value="E85">E85</option>
-            <option value="SP95">SP95</option>
-            <option value="jambon">jambon</option>
-          </select>
-        </div>
-        <div class="formGroup">
-          <label for="fournisseur">Fournisseur</label>
-          <select name="fournisseur" id="fournisseur">
-            <option value="BioEthanol">BioEthanol</option>
-            <option value="Gazole">Gazole</option>
-            <option value="E85">E85</option>
-            <option value="SP95">SP95</option>
-            <option value="jambon">jambon</option>
-          </select>
-        </div>
-        <div class="formGroup">
-          <label for="quantity">Quantity</label>
-          <input type="number" name="quantity" id="quantity">
-        </div>
-        <div class="formGroup">
-          <label for="montant">Montant</label>
-          <input type="number" name="montant" id="montant">
-        </div>
-        <button>Valider</button>
-
-      </form>
+      <app-add-reappro></app-add-reappro>
     </div>
   </div>
 </div>
