--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,7 +1,7 @@
 <nav>
-  <h3>Base de données</h3>
-  <h3>Cartes</h3>
-  <h3 [style.font-weight]="this.router.url=='/incidents' ? 'bold':'unset'" routerLink="/incidents">Incidents</h3>
-  <h3>Ressources humaines</h3>
+  <h3 [style.font-weight]="this.router.url=='/database' ? 'bold':'unset'" routerLink="/database">Base de données</h3>
+  <h3 [style.font-weight]="this.router.url=='/cartes' ? 'bold':'unset'" routerLink="/cartes">Cartes</h3>
+  <h3 [style.font-weight]="this.router.url=='/incidents/FAQ' || this.router.url=='/incidents/report'|| this.router.url=='/incidents/daily' ? 'bold':'unset'" routerLink="/incidents">Incidents</h3>
+  <h3 [style.font-weight]="this.router.url=='/rh' ? 'bold':'unset'" routerLink="/rh">Ressources humaines</h3>
   <h3 [style.font-weight]="this.router.url=='/caisse' ? 'bold':'unset'" routerLink="/caisse">Caisse</h3>
 </nav>
