--- a/src/app/stocks/add-reappro/add-reappro.component.html
+++ b/src/app/stocks/add-reappro/add-reappro.component.html
@@ -4,15 +4,16 @@
     <mat-form-field appearance="fill">
       <mat-label>Produit demandé</mat-label>
       <mat-select [formControl]="productProposed">
-        <mat-option *ngFor="let product of productProposedList" [value]="product">{{product}}</mat-option>
+        <mat-option *ngFor="let product of productProposedList" [value]="product.idProduit">{{product.nom}}</mat-option>
       </mat-select>
     </mat-form-field>
   </div>
   <div class="formGroup">
     <mat-form-field appearance="fill">
       <mat-label>Fournisseur</mat-label>
-      <mat-select [formControl]="productProposed">
-        <mat-option *ngFor="let fournisseur of fournisseurList" [value]="fournisseur">{{fournisseur}}</mat-option>
+      <mat-select [formControl]="fournisseur">
+        <mat-option *ngFor="let fournisseur of fournisseurList"
+          [value]="fournisseur.idFournisseur">{{fournisseur.nom}}</mat-option>
       </mat-select>
     </mat-form-field>
   </div>
@@ -24,5 +25,5 @@
     <label for="amount">Montant</label>
     <input type="number" name="amount" id="amount">
   </div>
-  <button>Valider</button>
+  <button (click)="addReappro()">Valider</button>
 </form>
