--- a/src/app/stocks/stocks.component.css
+++ b/src/app/stocks/stocks.component.css
@@ -39,7 +39,8 @@ ul {
   display: flex;
   flex-direction: column;
   padding: 0em 1em;
-  justify-content: space-around;
+  gap: 1em;
+  /* justify-content: space-around; */
 }
 
 .date {
@@ -81,4 +82,6 @@ ul {
   color: var(--green512);
   font-weight: bold;
   border-radius: 0 10px 10px 0;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  z-index: -1;
 }
