--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Rubik&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -22,13 +23,23 @@ app-incidents {
   width: 150px;
 }
 
+app-add-reappro {
+  flex: 4;
+}
+
 app-add-fournisseur,
 app-add-reappro,
-app-show-inventory {
+app-show-inventory
+ {
+  display: block;
   width: 100%;
   height: 90%;
 }
+app-horaires-boutique{
+  display: block;
+  height: 70%;
 
+}
 .buttonBase {
   border: none;
   background-color: var(--green512);
@@ -37,12 +48,14 @@ app-show-inventory {
   color: #fff;
   font-size: 1.3em;
 }
+
 button {
   transition: all 0.2s ease-in-out;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
   cursor: pointer;
 }
+
 form {
   width: 50%;
   height: 95%;
@@ -62,16 +75,19 @@ form h3 {
   color: var(--green512);
   margin-bottom: 1em;
 }
+
 .formGroup {
   display: flex;
   flex-direction: column;
   height: 20%;
   width: 70%;
 }
+
 .formGroup label {
   font-size: 1.5em;
   width: max-content;
 }
+
 .formGroup input,
 .formGroup select {
   background: #ebebeb;
@@ -94,6 +110,7 @@ form button {
   padding: 0.5em 1em;
   margin-bottom: 1em;
 }
+
 form button:hover,
 button:hover {
   filter: brightness(1.2);
@@ -103,6 +120,7 @@ html,
 body {
   height: 100%;
 }
+
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
